fix(styles): fix material card missing border in elevated state

--- a/projects/igniteui-angular/card/src/card/themes/shared/_material.scss
+++ b/projects/igniteui-angular/card/src/card/themes/shared/_material.scss
@@ -2,12 +2,6 @@
 @use 'igniteui-theming/sass/typography' as *;
 @use 'styles/themes/standalone' as *;
 
-@include themed-block(igx-card, material) {
-    @include m(elevated) {
-        border: none;
-    }
-}
-
 @include themed-block(igx-card-header, material) {
     @include e(title) {
         @include type-style(h6) {
